--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /*----------------- Fonts-----------------*/
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500;600;700;800&display=swap');
 
 /*----------------- Background Colors-----*/
 body{
@@ -8,7 +9,10 @@ footer{
     background-color: #0062a1;
 }
 
-
+/*----------------- General-----------------*/
+h1, h2, h3, h4, h5, h6{
+    font-family: "Lexend", sans-serif;
+}
 /*----------------- Header-----------------*/
 .name{
     text-align: center;
@@ -48,6 +52,9 @@ header{
     color: #f3101f;
 }
 
+.meaning{
+    background-color: #f3101f;
+}
 /*----------------- Cards-----------------*/
 /*Card needs to be the same height and uniform throughout
 .card{
@@ -70,6 +77,18 @@ header{
     background-color: rgba(255, 20, 147, .15);
 }
 
+.card-header{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600
+}
+
+.card i{
+    text-align: center;
+    color: #0062a1;
+    margin: 5px;
+}
+
 /*.card-img-top{}*/
 
 /*----------------- Contact-Info-----------------*/
@@ -82,4 +101,23 @@ footer{
     padding-top: 5px;
     text-align: center;
     color: #fbfbfb;
+}
+footer i{
+    text-align: center;
+    color: #fbfbfb;
+    margin: 5px;
+}
+/*------------------- Classes-----------------*/
+.class-heading{
+    font-family: "Lexend", sans-serif;
+    color: #0062a1;
+}
+
+.table{
+    font-family: "Lexend", sans-serif;
+    font-weight: lighter;
+    font-size: 20px;
+}
+.table i{
+    font-size: 30px;
 }
