Addition of Images to assests and pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,13 @@ footer i{
 .table i{
     font-size: 30px;
 }
+
+.classimage{
+    height: 60%;
+    width: 60%;
+}
+
+#map{
+    max-height: 200px;
+    max-width: 200px;
+}
